--- a/MPfm/MPfm.iOS/XIB/iPad/CloudConnectViewController_iPad.xib
+++ b/MPfm/MPfm.iOS/XIB/iPad/CloudConnectViewController_iPad.xib
@@ -10,8 +10,8 @@
                 <outlet property="activityIndicator" destination="P8v-W5-4IA" id="R4w-Av-uLM"/>
                 <outlet property="btnOK" destination="I4f-Yy-sT3" id="cbd-Ug-i9u"/>
                 <outlet property="lblStatus" destination="p2p-f8-FTa" id="R7T-OE-7eZ"/>
-                <outlet property="lblTitle" destination="Ose-9E-shY" id="519-fm-R95"/>
                 <outlet property="view" destination="2" id="3"/>
+                <outlet property="viewPanel" destination="vJd-Gp-w1r" id="4CP-UW-GUg"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -19,26 +19,16 @@
             <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vJd-Gp-w1r">
-                    <rect key="frame" x="244" y="442" width="280" height="147"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vJd-Gp-w1r">
+                    <rect key="frame" x="265" y="407" width="239" height="189"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <subviews>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" fixedFrame="YES" text="Connecting to Dropbox..." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p2p-f8-FTa">
-                            <rect key="frame" x="48" y="45" width="212" height="26"/>
+                        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="P8v-W5-4IA">
+                            <rect key="frame" x="101" y="20" width="37" height="37"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="13"/>
-                            <color key="textColor" white="0.90265739050000005" alpha="1" colorSpace="calibratedWhite"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" fixedFrame="YES" text="Connect to Dropbox" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="240" translatesAutoresizingMaskIntoConstraints="NO" id="Ose-9E-shY">
-                            <rect key="frame" x="20" y="9" width="240" height="32"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="22"/>
-                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            <nil key="highlightedColor"/>
-                        </label>
+                        </activityIndicatorView>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I4f-Yy-sT3" customClass="MPfmButton">
-                            <rect key="frame" x="20" y="84" width="240" height="44"/>
+                            <rect key="frame" x="31" y="126" width="176" height="44"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="14"/>
                             <state key="normal" title="Cancel">
@@ -48,18 +38,25 @@
                                 <action selector="actionOK:" destination="-1" eventType="touchUpInside" id="lZR-Dh-5bR"/>
                             </connections>
                         </button>
-                        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="P8v-W5-4IA">
-                            <rect key="frame" x="20" y="48" width="20" height="20"/>
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" fixedFrame="YES" text="Connecting to Dropbox..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p2p-f8-FTa">
+                            <rect key="frame" x="31" y="68" width="176" height="26"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        </activityIndicatorView>
+                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
+                            <color key="textColor" white="0.90265739050000005" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                     </subviews>
-                    <color key="backgroundColor" red="0.12549019610000001" green="0.15686274510000001" blue="0.18039215689999999" alpha="0.5" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.20000000000000001" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="239" id="f9n-Rl-9oa"/>
+                        <constraint firstAttribute="height" constant="189" id="v4J-Az-VLE"/>
+                    </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.84999999999999998" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="centerX" secondItem="vJd-Gp-w1r" secondAttribute="centerX" id="PdJ-fn-33F"/>
-                <constraint firstAttribute="centerY" secondItem="vJd-Gp-w1r" secondAttribute="centerY" id="pGz-Zx-bzP"/>
+                <constraint firstAttribute="centerX" secondItem="vJd-Gp-w1r" secondAttribute="centerX" id="hpZ-Z9-heZ"/>
+                <constraint firstAttribute="centerY" secondItem="vJd-Gp-w1r" secondAttribute="centerY" id="qbu-Ko-qre"/>
             </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackOpaque"/>
         </view>
